# insighthub

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
backend/: pyproject.toml
backend/apps/core/: middleware.py  models.py  security.py  utils.py
backend/apps/ingestion/: billing_protection.py  budget_control.py  mock_providers.py  urls.py  views.py
backend/apps/ingestion/services/: data_collector.py
backend/apps/ingestion/sources/: base.py  foursquare.py  google_places.py  mock_data.py  yelp.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py
data/: sample_businesses.json
docker/: Dockerfile.backend
docs/: api_setup_guide.md  windows-troubleshooting.md
scripts/: generate_secrets.py  setup.sh  setup_foursquare.py
